# OmegaTrader

./: CMakeLists.txt  MVP.md  README.md
includes/: EMA.hpp  Order.hpp  OrderBook.hpp  SMA.hpp  Strategy.hpp  WMA.hpp
src/: EMA.cpp  Order.cpp  OrderBook.cpp  SMA.cpp  WMA.cpp
tests/: test_EMA.cpp  test_SMA.cpp  test_WMA.cpp  test_order.cpp  test_orderbook.cpp
